# structured_plot

./: .gitignore  Pipfile  __init__.py  figure.1.py  figure.py  figure_sizing.py  i_subplot.py  layout.py  pyproject.toml  readme.md  save_plot.py  setup.cfg  subgrid.1.py  subgrid.py  subplot.py  subplot_time.py  test.md  type_set.py
docs/: architecture.pptx
figure_size/: __init__.py  powerpoint.py
kit/: __init__.py  gen_action.py  gen_plotter.py  get_literal_or_series.py  get_subset.py  i_coordinate_transform.py  i_get_factor.py
lib/: handle_duplicate.py
plot_action/: __init__.py  action.py  artist_options.py  axes_style.py  band.py  bar.py  box.py  contour.py  dummy_data.py  errorbar.py  fill.py  hist.py  imshow.py  line.py  multiple.py  scatter.py  text.py  velocity.py  vhlines.py  violin.py
structured_plot/: dummy_data.py  figure.py  i_subplot.py  layout.py  save_plot.py  subgrid.py  subplot.py  subplot_time.py  type_set.py
structured_plot/figure_size/: a4.py  i_figure_size.py  padding.py
structured_plot/lib/: handle_dict.py  handle_duplicate.py
structured_plot/plot_action/: __init__.py  artist_options.py  axes_style.py  band.py  bar.py  box.py  contour.py  cycler.py  errorbar.py  fill.py  hist.py  imshow.py  mapping.py  multiple.py  plot.py  scatter.py  text.py
